tests/compiler/breakNotInIterationOrSwitchStatement1/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/breakNotInIterationOrSwitchStatement1.ts`, Apache-2.0 License

break;
//~^ ERROR: A 'break' statement can only be used within an enclosing iteration or switch statement.